--- a/assets/precet.css
+++ b/assets/precet.css
@@ -360,7 +360,7 @@ textarea {
     padding: 0.2em 0;
 }
 
-/* My own precents - Fonts and ets.. */
+/* My own precets - Fonts and ets.. */
 h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 400;
@@ -412,18 +412,9 @@ h5 {
     width: 200px;
     height: 52px;
     border-radius: 100px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     background-color: #F1CDB3;
     outline: none;
@@ -433,18 +424,9 @@ h5 {
     width: 200px;
     height: 52px;
     border-radius: 100px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     background-color: #FAFAFA;
     outline: none;
@@ -466,8 +448,6 @@ h5 {
 }
 .pink_slider-button {
     align-self: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     align-items: center;
     justify-content: center;
