--- a/pages/pets/pets.css
+++ b/pages/pets/pets.css
@@ -174,3 +174,70 @@ footer {
     padding-right: 20px;
 }
 /* Section Footer ends */
+
+@media (min-width: 768px) and (max-width: 1200px) {
+    .wrapper {
+        max-width: 700px;
+        margin: 0 auto;
+    }
+    .header__wraper {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-end;
+        justify-content: space-between;
+        margin-top: 30px;
+    }
+    .our__pets {
+        background-color: #F6F6F6;
+        margin-top: 120px;
+    }
+    .footer__content {
+        display: grid; 
+        grid-template-columns: 1fr 1fr; 
+        grid-template-rows: 0.7fr 0.8fr; 
+        gap: 0px 0px; 
+        grid-template-areas: 
+          "footter_questions footer__visit"
+          "footer__pic footer__pic"; 
+      }
+      .footter_questions { grid-area: footter_questions; }
+      .footer__visit { grid-area: footer__visit; }
+      .footer__pic { grid-area: footer__pic; }
+    footer {
+        height: 639px;
+        background: url(/assets/images/start-screen-gradient-background.png) no-repeat;
+        background-size: cover;
+    }
+    .footer__questions-title { padding-top: 0; }
+    .footer__pic { 
+        padding-top: 31px; 
+        margin-left: 150px;
+    }
+    .our__pets-title {
+        text-align: center;
+        padding-top: 45px;
+        padding-bottom: 45px;
+    }
+    .our__pets-grid {
+        display: grid; 
+        grid-auto-columns: 1fr; 
+        grid-template-columns: 1fr 1fr; 
+        grid-template-rows: 1fr 1fr 1fr; 
+        gap: 20px;
+        grid-template-areas: 
+          ". ."
+          ". ."
+          ". ."; 
+    }
+    .our__pets-card {
+        width: 270px;
+        height: 435px;
+        background-color: #FAFAFA;
+        border-radius: 9px;
+        
+        margin-left: 20px;
+    }
+    .pet__card-inactive {
+        display: none;
+    }
+}
