changed local links into links for gh-pages | our-pets page

--- a/pages/pets/pets.css
+++ b/pages/pets/pets.css
@@ -140,7 +140,7 @@
 /* Section Footer starts */
 footer {
     height: 350px;
-    background: url(/assets/images/start-screen-gradient-background.png) no-repeat;
+    background: url(../../assets/images/start-screen-gradient-background.png) no-repeat;
     background-size: cover;
 }
 .footer__content {
@@ -205,7 +205,7 @@ footer {
       .footer__pic { grid-area: footer__pic; }
     footer {
         height: 639px;
-        background: url(/assets/images/start-screen-gradient-background.png) no-repeat;
+        background: url(../../assets/images/start-screen-gradient-background.png) no-repeat;
         background-size: cover;
     }
     .footer__questions-title { padding-top: 0; }
