added burger menu | main and our-pets pages

--- a/pages/main/main.css
+++ b/pages/main/main.css
@@ -54,6 +54,17 @@
 .header__link:hover {
     color: #F1CDB3;
 }
+.hambueger__menu {
+    display: none;
+    cursor: pointer;
+}
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    background-color: #F1CDB3;
+}
 /* Section header ends */
 
 /* Section info starts */
@@ -395,7 +406,35 @@ footer {
 @media (min-width: 320px) and (max-width: 767px) {
     .intro { padding-top: 130px; }
     .header__wraper { margin-top: 30px; }
-    .header__list { display: none; }
+    .hambueger__menu {
+        display: block;
+    }
+    .hambueger__menu.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+    .hambueger__menu.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hambueger__menu.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .header__list {
+        position: fixed;
+        left: -100%;
+        gap: 20px;
+        flex-direction: column;
+        background-color: #262626;
+        opacity: 90%;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
+    .list__item {
+        margin-top: 20px;
+        margin-right: 0px;
+    }
+    .header__list.active { left: 0; }
     .main { height: 823px; }
     .wrapper {
         max-width: 300px;
