--- a/pages/pets/pets.css
+++ b/pages/pets/pets.css
@@ -10,6 +10,17 @@
     left: 0;
     width: 100%;
 }
+.hambueger__menu {
+    display: none;
+    cursor: pointer;
+}
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    background-color: black;
+}
 .header__wraper {
     display: flex;
     flex-wrap: wrap;
@@ -254,8 +265,37 @@ footer {
         justify-content: space-between;
         margin-top: 30px;
     }
+    .hambueger__menu {
+        display: block;
+    }
+    .hambueger__menu.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+    .hambueger__menu.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hambueger__menu.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .header__list {
+        position: fixed;
+        left: -100%;
+        gap: 20px;
+        flex-direction: column;
+        background-color: #262626;
+        opacity: 90%;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
     .list__item {
-        display: none;
+        margin-top: 20px;
+        margin-right: 0px;
+    }
+    .header__list.active { left: 0; }
+    .list__item {
+        display: block;
     }
     .pet__card-inactive-320 {
         display: none;
