--- a/pages/pets/pets.css
+++ b/pages/pets/pets.css
@@ -285,9 +285,15 @@ footer {
         background-color: #262626;
         opacity: 90%;
         width: 100%;
-        height: 100%;
+        height: 230px;
         text-align: center;
         transition: 0.3s;
+    }
+    .disable__scroll {
+        overflow: hidden;
+    }
+    .enable__scroll {
+        overflow: auto;
     }
     .list__item {
         margin-top: 20px;
